Card Maker Version History
--------------------------
1.0.0.2
- Fixed export issue involving use of the cardcount functionality
- Added background color for all element types
- Added zoom helpers (Fit + Fit Horizontal)... will someone need "Fit Vertical" ???
- Added inline background shape functionality
- Added inline background graphic functionality
- Added graphic tiling option ("tile size")
- Added switch alternative with a different delimiter (//)
- Fixed problem with random number functionality (text after the replacement was lost!)
- Fixed issue with justified text (not clear it was even functional...)

1.0.0.1
- Added divider functionality
- Added ![cardcount] functionality to the Incept translator
- Added ability to override element fields in the define/variable field with $[fieldname:value] (same override formatting as data source)
- Added ability to configure PDF exports in cm, mm, and inches
- Added ability to configure Layout size based on cm, mm, and inch values
- Added sub counter functionality to file name (Thanks Feynt)
- Fixed issue with BGC FormattedText tag not respecting the x/y offset values
- Default the alpha/opacity value for fc/bgc tags to that of the element (or whatever its state is as of tag evaluation) if the alpha value is not specified (for colors)
- Apply the alpha/opacity of the element (at the time of evaluation) for bgi/img tags
- Numeric (integer) overrides can now be specified in hex form (0x## or just ##) Example: 0xC4 (good idea) or C4 (not a good idea)
- Added Google spreadsheet browser to the Project Settings dialog.
- Added Project Settings to project menu (shocking!)
- Element enabled state toggle is now part of undo/redo
- Disabled elements no longer accept changes (well hopefully). They should also block some multi-element actions.
- Added Clear Image Cache and Reload References buttons to the Canvas toolbar
- Minor improvements to the layout template selection dialog (including a text filter)