@@ -1,6 +1,7 @@
 Card Maker Version History
 --------------------------
 1.0.0.2
+- Added font preview to the font selection dialog.
 - Fixed export issue involving use of the cardcount functionality
 - Added background color for all element types
 - Added zoom helpers (Fit + Fit Horizontal)... will someone need "Fit Vertical" ???
